Sync Dashboard and app controller troughtout notification services in order to ensure user data it's already served by the API Remove default login redirect; Now working with grockit 1.0 integration Fixed button video list missalignment Add observers destroy Refactor user data response; now responding trough a notification

--- a/src/modules/app/video-library/video-library.scss
+++ b/src/modules/app/video-library/video-library.scss
@@ -57,7 +57,7 @@
       md-icon {
         float: left;
         margin-right: 5px;
-        margin-top: 11px;
+        // margin-top: 11px;
       }
     }
   }
